--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -52,6 +52,7 @@
   margin-right: 12px;
   padding: 10px;
   font-weight: bold;
+  font-size: 16px;
   border: 1px solid $dark-golden;
   transition: 0.3s
 }
